Fix spacing of images for smaller screens

--- a/css/main.css
+++ b/css/main.css
@@ -28,8 +28,8 @@ section {
   padding: 1rem;
   margin: 0;
   text-align: center;
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
-  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.9);
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, .5));
+  text-shadow: 1px 1px 5px rgba(0, 0, 0, .9);
   transition: all .2s linear;
 }
 
@@ -39,6 +39,8 @@ section {
 }
 
 .hover-box img {
+  width: 100%;
+  display: block;
   filter: grayscale(100%);
   transition: all .2s linear;
 }
